fix z-index to prevent overlap with snipcart

--- a/src/app/modules/backbone/components/floating-action/floating-action.component.scss
+++ b/src/app/modules/backbone/components/floating-action/floating-action.component.scss
@@ -1,5 +1,5 @@
 .floating-action-button {
-    @apply fixed bottom-5 right-10 z-50;
+    @apply fixed bottom-5 right-10 z-10;
     @apply p-4 rounded-full shadow-lg;
     @apply bg-yellow-200 text-yellow-800 font-bold text-center cursor-pointer;
 
