--- a/src/app/shared/components/dropdown/dropdown.component.scss
+++ b/src/app/shared/components/dropdown/dropdown.component.scss
@@ -38,7 +38,7 @@
 }
 
 .dropdown-option-list-container {
-    @apply absolute flex flex-col z-50;
+    @apply absolute flex flex-col z-10;
     @apply w-full top-full left-0 mt-2;
     @apply shadow rounded overflow-y-auto;
 }
